--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 p {
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .game-container {
@@ -35,6 +35,11 @@ img {
   padding: 5px;
 }
 .patient-img {
+  width: 500px;
+  height: 500px;
+  padding: 5px;
+}
+.pain-chest-img {
   width: 500px;
   height: 500px;
   padding: 5px;
